This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: An incorrect check in _msi.c's msidb_getsummaryinformation()
Type: behavior Stage: resolved
Components: Windows Versions: Python 3.8, Python 3.7, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, paul.moore, steve.dower, tim.golden, zach.ware
Priority: normal Keywords: patch

Created on 2019-02-27 18:38 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12074 merged ZackerySpytz, 2019-02-27 18:40
PR 12221 merged miss-islington, 2019-03-07 18:20
PR 12222 merged miss-islington, 2019-03-07 18:20
Messages (5)
msg336776 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2019-02-27 18:38
msidb_getsummaryinformation() checks the wrong variable after calling PyObject_NEW().
msg337419 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-03-07 18:20
New changeset bf94cc7b496a379e1f604aa2e4080bb70ca4020e by Steve Dower (Zackery Spytz) in branch 'master':
bpo-36140: Fix an incorrect check in msidb_getsummaryinformation() (GH-12074)
https://github.com/python/cpython/commit/bf94cc7b496a379e1f604aa2e4080bb70ca4020e
msg337420 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-03-07 18:21
Thanks for the patch! Once the backports merge, I (or someone else) will close the issue.
msg337423 - (view) Author: miss-islington (miss-islington) Date: 2019-03-07 18:39
New changeset 6ba95c38c556ad4d254c5af34f439a1307ed585c by Miss Islington (bot) in branch '3.7':
bpo-36140: Fix an incorrect check in msidb_getsummaryinformation() (GH-12074)
https://github.com/python/cpython/commit/6ba95c38c556ad4d254c5af34f439a1307ed585c
msg337425 - (view) Author: miss-islington (miss-islington) Date: 2019-03-07 18:49
New changeset b19943ec97b80db97dd93ed714615f757cc12ad3 by Miss Islington (bot) in branch '2.7':
bpo-36140: Fix an incorrect check in msidb_getsummaryinformation() (GH-12074)
https://github.com/python/cpython/commit/b19943ec97b80db97dd93ed714615f757cc12ad3
History
Date User Action Args
2022-04-11 14:59:11adminsetgithub: 80321
2019-03-07 19:31:09steve.dowersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-03-07 18:49:18miss-islingtonsetmessages: + msg337425
2019-03-07 18:39:46miss-islingtonsetnosy: + miss-islington
messages: + msg337423
2019-03-07 18:21:38steve.dowersetmessages: + msg337420
2019-03-07 18:20:34steve.dowersetmessages: + msg337419
2019-03-07 18:20:32miss-islingtonsetpull_requests: + pull_request12212
2019-03-07 18:20:25miss-islingtonsetpull_requests: + pull_request12211
2019-02-27 18:40:25ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12093
2019-02-27 18:38:06ZackerySpytzcreate