bpo-36140: Fix an incorrect check in msidb_getsummaryinformation() (GH-12074)